# llm-strategy-lab

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  research.yml  task.yml
.github/workflows/: ci.yml  lint.yml  test.yml
apps/api/: README.md
apps/ui/: README.md
configs/environments/: dev.yaml  test.yaml
configs/experiments/: sample_research.yaml
configs/strategies/: double.default.yaml  mom.default.yaml  pca_plain.default.yaml  pca_sub.default.yaml
data/sample/: README.md  factor_returns.csv  jp_sectors.csv  trading_calendar.csv  us_sectors.csv
docs/architecture/: overview.md
docs/decisions/: 0001-use-monorepo.md
docs/roadmap/: milestones.md
docs/runbooks/: local-development.md
docs/specs/: implementation-spec.md  pca-subspace-notes.md
docs/status/: implementation-status.md
scripts/dev/: run_local.sh
scripts/release/: cut_tag.sh
scripts/setup/: bootstrap.sh  github_labels.sh
tests/unit/: test_backtest.py  test_child_runs.py  test_cli.py  test_config_and_runner.py  test_double_strategy.py  test_evaluation.py  test_loop_executor.py  test_mom_strategy.py  test_pca_plain_strategy.py  test_pca_sub_strategy.py  test_proposals.py  test_run_comparison.py  test_scaffold_runner.py
